2010-06-13  Brian Gough  <bjg@gnu.org>

	* choleskyc.c (gsl_linalg_complex_cholesky_invert): added new
	routine for inversion (Huan Wu)

2010-02-24  Brian Gough  <bjg@network-theory.co.uk>

	* svdstep.c (trailing_eigenvalue): compute the implicit shift
	value mu robustly

	* svd.c (gsl_linalg_SV_decomp): scale the bidiagonal matrix before
	the implicit QR step

	* householder.c (gsl_linalg_householder_transform): handle the
	case where the scaling factor is subnormal

2009-07-04  Brian Gough  <bjg@network-theory.co.uk>

	* luc.c (gsl_linalg_complex_LU_solve, gsl_linalg_complex_LU_svx,
	gsl_linalg_complex_LU_refine, singular): added check
	for singular matrix

2009-06-28  Brian Gough  <bjg@network-theory.co.uk>

	* lu.c (gsl_linalg_LU_solve, gsl_linalg_LU_svx,
	gsl_linalg_LU_refine, gsl_linalg_LU_invert, singular): added check
	for singular matrix

2009-06-04  Brian Gough  <bjg@network-theory.co.uk>

	* hermtd.c (gsl_linalg_hermtd_unpack): use U as matrix name
	instead of Q

2008-10-20  Brian Gough  <bjg@network-theory.co.uk>

	* svd.c (gsl_linalg_SV_decomp_jacobi): change use of
	gsl_coerce_double to macro so it is not called unnecessarily

2008-08-30  Brian Gough  <bjg@network-theory.co.uk>

	* tridiag.c (solve_cyc_tridiag_nonsym): use x_stride when storing
	in x[] (fixes bug #24162)

2008-08-26  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (test_QRPT_update_dim): added tests for
	gsl_linalg_QRPT_update

	* qrpt.c (gsl_linalg_QRPT_update): handle rectangular matrices

2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>

	* Makefile.am (INCLUDES): use top_srcdir instead of top_builddir

2008-04-28  Brian Gough  <bjg@network-theory.co.uk>

	* bidiag.c (gsl_linalg_bidiag_unpack, gsl_linalg_bidiag_unpack2):
	use new descending loop convention

	* hermtd.c (gsl_linalg_hermtd_unpack): use new descending loop
	convention

	* hh.c (gsl_linalg_HH_svx): use new descending loop convention

	* lq.c (gsl_linalg_LQ_vecQ, gsl_linalg_LQ_unpack): use new