@@ -1,3 +1,8 @@
+2011-04-15  Brian Gough  <bjg@network-theory.co.uk>
+
+	* choleskyc.c (gsl_linalg_complex_cholesky_invert): avoid mixing
+	declarations and code (C9X)
+
 2010-06-13  Brian Gough  <bjg@gnu.org>
 
 	* choleskyc.c (gsl_linalg_complex_cholesky_invert): added new
